Some changes made for board and tasks controller
