# src/controller/tasks_controller.py
@@ -4,77 +4,66 @@ from dataclasses import dataclass
 
 
 @dataclass
-class Tasks:
+class Task:
     id: str
     name: str
     date: str
     list_id: str
+    board_id: str
     priority: int = 1000
-    board_id: str = "a1"
     description: str = ""
 
 
+
 TASKS = list()
-example_1 = Tasks("1", "Prepare a new board", datetime(2023, 4, 3).strftime("%Y-%m-%d"), "e1")
-example_2 = Tasks("2", "Prepare a task list", datetime(2023, 5, 6).strftime("%Y-%m-%d"), "e2")
-example_3 = Tasks("3", "naming", datetime(2022, 5, 6).strftime("%Y-%m-%d"), "e3")
-example_4 = Tasks("4", "Make a to-do list for shopping", datetime(2021, 4, 3).strftime("%Y-%m-%d"), "e3", 2000)
-example_5 = Tasks("5", "edit", datetime(2023, 5, 8).strftime("%Y-%m-%d"), "e2", 2000)
-example_6 = Tasks("6", "Going to lake side", datetime(2023, 7, 6).strftime("%Y-%m-%d"), "e3", 3000)
-example_7 = Tasks("7", "New board task created", datetime(2019, 4, 3).strftime("%Y-%m-%d"), "e3", 4000)
-
-TASKS.append(example_1)
-TASKS.append(example_2)
-TASKS.append(example_3)
-TASKS.append(example_4)
-TASKS.append(example_5)
-TASKS.append(example_6)
-TASKS.append(example_7)
+TASKS.append(Task("1", "Prepare a new board", datetime(2023, 4, 3).strftime("%Y-%m-%d"), "e1", "a1"))
+TASKS.append(Task("2", "Prepare a task list", datetime(2023, 5, 6).strftime("%Y-%m-%d"), "e2", "a1"))
+TASKS.append(Task("3", "naming", datetime(2022, 5, 6).strftime("%Y-%m-%d"), "e3", "a1"))
+TASKS.append(Task("4", "Make a to-do list for shopping", datetime(2021, 4, 3).strftime("%Y-%m-%d"), "e3", "a1", 2000))
+TASKS.append(Task("5", "edit", datetime(2023, 5, 8).strftime("%Y-%m-%d"), "e2", "a1", 2000))
+TASKS.append(Task("6", "Going to lake side", datetime(2023, 7, 6).strftime("%Y-%m-%d"), "e3", "a1", 3000))
+TASKS.append(Task("7", "New board task created", datetime(2019, 4, 3).strftime("%Y-%m-%d"), "e3", "a1", 4000))
 
 
-def read_tasks(boardId):
+def read_tasks(board_id, list_id):
     task_list = []
     for task in TASKS:
-        if task.board_id == boardId:
+        if task.board_id == board_id and task.list_id == list_id:
             task_list.append(task)
 
+    idx = 0
+    while idx < (len(task_list)-1):
+        if task_list[idx].priority > task_list[idx+1].priority:
+            task_list[idx], task_list[idx+1] = task_list[idx+1], task_list[idx]
+        idx += 1
+
+    print(task_list)
     return task_list
 
 
-def create(boardId, task):
+def create(board_id, list_id, task):
+    date = task.get("date", "")
+    description = task.get("description", "")
     task_id = task.get("id")
     name = task.get("name")
-    description = task.get("description", "")
     priority = task.get("priority", int())
-    listId = task.get("listId", "")
-    date = task.get("date", "")
 
     if date == "":
         date = datetime.now()
 
-    for task in TASKS:
-        if task_id and task.id != task_id:
-            continue
-        else:
-            if task.board_id == boardId:
+    for task_in_list in TASKS:
+        if task_in_list.board_id == board_id:
+            if task_id and task_in_list.id != task_id:
+                continue
+            else:
                 abort(
                     406,
                     f"Task with the name of {name} already exists",
                 )
 
-    task_instance = Tasks(task_id, name, description, priority, listId, date)
+    task_instance = Task(task_id, name, date, list_id, board_id, priority, description)
     TASKS.append(task_instance)
     return 201
-
-
-def read_one(id):
-    for task in TASKS:
-        if task.id == id:
-            return task
-
-    abort(
-        404, f"Task with the id({id}) not found"
-    )
 
 
 def delete(id):
@@ -92,19 +81,16 @@ def delete(id):
 
 
 def update(id, task):
+
     for idx in range(0, len(TASKS)):
-        if TASKS[idx].id == id:
-            my_task = TASKS[idx].description
-            my_task = task.get("description", my_task)
-            return my_task
+        if TASKS[idx].id == task.get("id"):
+            TASKS[idx].list_id = task.get("list_id", TASKS[idx].list_id)
+            TASKS[idx].priority = task.get("priority", TASKS[idx].priority)
+            TASKS[idx].description = task.get("description", TASKS[idx].description)
+            print(TASKS[idx])
+            return 200
 
     abort(
         404,
         f"Task with the ID ({id}) not found"
     )
-
-
-
-
-
-
